# config-patch

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: format.rs  main.rs  merge.rs
tests/: integration_test.rs
