[package]
name = "config-patch"
version = "0.1.0"
edition = "2021"
description = "Deep-merge configuration files across multiple sources with smart array handling"

[[bin]]
name = "config-patch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
